# diff-ensemble

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  publish.sh  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
api/: index.html
diff_ensemble/: __init__.py  ensemble.py  io.py  model.py  observables.py  train.py
docs/: getting-started.md  index.md  theory.md
docs/api/: index.md
ensemble_predictor/: model.py  train.py
examples/: quickstart_ensemble.ipynb
getting-started/: index.html
search/: search_index.json
tests/: test_ensemble.py  test_imports.py  test_io.py  test_model.py  test_observables.py  test_stubs.py  test_train.py
tests/validation/: test_montelione_spa.py  test_scientific_validity.py
theory/: index.html
