[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
ignore = ["N806", "N803"] # Allow non-lowercase variables (common in math/physics)

[project]
name = "diff-ensemble"
version = "0.1.0"
description = "Differentiable VAE-based structural ensemble prediction for disordered proteins"
authors = [{name = "George Elkins"}]
license = {text = "MIT"}
dependencies = [
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "numpy",
    "diff-biophys",
    "synth-pdb",
    "synth-nmr",
    "synth-saxs",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
